--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -18,11 +18,18 @@ img {
 }
 /*vars*/
 $blue-one:#157ebf;
+$blue-two:#074a74;
+$orange-one:#f3ac3b;
 
 .hamburguer {
+  color: $blue-two;
+  border-radius: 0.4rem;
   margin: 1rem;
   font-size: 2rem;
-  background-color: transparent;
+  padding: 0.5rem;
+  padding-bottom: 0;
+  background-color: $orange-one;
+  box-shadow: 5px 10px 18px #080808;
   border: none;
 }
 
@@ -40,18 +47,16 @@ $blue-one:#157ebf;
     
     display: flex;
     list-style: none;
-    align-items: center;
     li {
-      margin: 0.3rem;
       &:hover {
-        transform: scale(1.2);
+        transform: scale(1.1);
       }
     }
   }
   a {
     background: $blue-one;
     padding: 0.5rem;
-    color: rgb(246, 246, 246);
+    color: #f6f6f6;
     text-decoration: none;
     &:hover {
       font-weight: bold;
