--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,7 +71,18 @@ input, select, textarea {
 	-ms-appearance: none;
 	appearance: none;
 }
-
+.footer-logos .icon{
+	border-radius: 100%;
+	border: solid 2px rgba(255, 255, 255, 0.125);
+	cursor: default;
+	display: inline-block;
+	font-size: 1.5em;
+	height: 2.25em;
+	line-height: 2.25em;
+	text-align: center;
+	width: 2.25em;
+	margin-bottom: 1em;
+}
 /* Basic */
 
 	@-ms-viewport {
